changes 1. add comments 2. add and delete functions into teachercontroller and teacherdatacontroller 3. edit list.cshtml and show.cshtml to display data 4. create add.cshtml view page

--- a/Assignment3_n01519420/Views/Teacher/List.cshtml
+++ b/Assignment3_n01519420/Views/Teacher/List.cshtml
@@ -1,7 +1,18 @@
-﻿
+﻿@model IEnumerable<Assignment3_n01519420.Models.Teacher>
 @{
     ViewBag.Title = "List";
 }
 
-<h2>List</h2>
+<div id="containerlist">
 
+    <h2>List of Teachers</h2>
+
+    @foreach (var teacher in Model)
+    {
+        <div class="listitem row">
+            <div class="col-md-12"><a href="/Teacher/Show/@teacher.TeacherId">@teacher.TeacherFName @teacher.TeacherLName @teacher.TEmpNumber</a></div>
+        </div>
+    }
+
+    <a class="navlink" href="/Teacher/Add">Add New Teacher</a>
+</div>
