Added Update view page, update method into controller class. Add classcontroller, class model and classdatacontroller class. Add modelside validation and in a teachercontroller class commenting javascript validation

--- a/Assignment3_n01519420/Views/Teacher/Show.cshtml
+++ b/Assignment3_n01519420/Views/Teacher/Show.cshtml
@@ -17,4 +17,9 @@
             Delete
         </button>
     </form>
+    <form method="get" action="/Teacher/Update/@Model.TeacherId">
+        <button class="updatebutton">
+            Update
+        </button>
+    </form>
 </div>
